--- a/Low-Code-Quality/.classpath
+++ b/Low-Code-Quality/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="C:/Users/hermanne/Downloads/commons-cli-1.5.0/commons-cli-1.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hermanne/Downloads/commons-cli-1.5.0/commons-cli-1.5.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hermanne/Downloads/commons-cli-1.5.0/commons-cli-1.5.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hermanne/Downloads/commons-cli-1.5.0/commons-cli-1.5.0-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hermanne/Downloads/commons-cli-1.5.0/commons-cli-1.5.0-test-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
